--- a/style/mobile.css
+++ b/style/mobile.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
 body {
-    font-family: "Raleway", "Sans serif";
+    font-family: "Raleway", "Sans serif", serif;
     margin: 0;
 }
 
@@ -85,10 +85,10 @@ a {
     width: 14rem;
     font-size: 1rem;
     font-weight: bold;
-    font-family: "Raleway", "Sans serif";
+    font-family: "Raleway", "Sans serif", serif;
 }
 .searchFormSearchinput::placeholder {
-    font-family: "Raleway", "Sans serif";
+    font-family: "Raleway", "Sans serif", serif;
     font-size: 1rem;
     color: #00000069;
 }
@@ -99,7 +99,7 @@ a {
     border: none;
     border-radius: 0 1rem 1rem 0;
     padding: 0 1.5rem;
-    font-family: "Raleway", "Sans serif";
+    font-family: "Raleway", "Sans serif", serif;
     font-size: 1rem;
     cursor: pointer;
 }
