--- a/style/tablette.css
+++ b/style/tablette.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
 body {
-    font-family: "Raleway", "Sans serif", serif;
+    font-family: "Raleway", "Sans serif";
     margin: 0;
 }
 
@@ -14,8 +14,6 @@ a {
     align-items: center;
     max-width: 1440px;
     margin: auto;
-    grid-template-columns: auto 1fr auto auto;
-    grid-template-areas: "logo . navbar button";
 }
 .headerImg {
     grid-area: logo;
@@ -37,7 +35,6 @@ a {
 }
 .headerNavLink[data-active=true] {
     color: #0065FC;
-    border-top: 3px solid #0065FC;
 }
 .headerNavLink:hover {
     color: #0065FC;
@@ -49,279 +46,6 @@ a {
     padding: 2rem;
     color: #0065FC;
     font-weight: 600;
-}
-
-.main {
-    max-width: 1440px;
-    margin: auto;
-    padding: 0 2rem;
-    box-sizing: border-box;
-}
-
-.searchHeaderTitle {
-    margin-bottom: 0.5rem;
-}
-.searchHeaderSubtitle {
-    margin-top: 0;
-}
-.searchForm {
-    display: inline-flex;
-    max-width: 100%;
-    overflow: auto;
-}
-.searchFormWrapicon {
-    background-color: #F2F2F2;
-    padding: 1rem 1.25rem;
-    border-radius: 1rem 0 0 1rem;
-    text-align: center;
-}
-.searchFormWrapiconIcon {
-    margin-left: 0.1rem;
-}
-.searchFormSearchinput {
-    border-right: none;
-    border-left: none;
-    border-top: #F2F2F2 1px solid;
-    border-bottom: #F2F2F2 1px solid;
-    padding: 0 1.5rem;
-    box-sizing: border-box;
-    width: 14rem;
-    font-size: 1rem;
-    font-weight: bold;
-    font-family: "Raleway", "Sans serif", serif;
-}
-.searchFormSearchinput::placeholder {
-    font-family: "Raleway", "Sans serif", serif;
-    font-size: 1rem;
-    color: #00000069;
-}
-.searchFormSubmitinput {
-    background-color: #0065FC;
-    color: white;
-    font-weight: bold;
-    border: none;
-    border-radius: 0 1rem 1rem 0;
-    padding: 0 1.5rem;
-    font-family: "Raleway", "Sans serif", serif;
-    font-size: 1rem;
-    cursor: pointer;
-}
-.searchFormSubmitinputText {
-    display: block;
-}
-.searchFormSubmitinputIcon {
-    display: none !important;
-}
-.searchFilters {
-    display: flex;
-    margin-top: 2rem;
-    flex-wrap: wrap;
-}
-.searchFiltersTitle {
-    margin: 0 2rem 1rem 0;
-    display: flex;
-    align-items: center;
-}
-.searchFiltersFilter {
-    display: flex;
-    align-items: center;
-    margin-right: 2rem;
-    border: 2px solid #d9d9d9;
-    border-radius: 2rem;
-    margin-bottom: 1rem;
-    cursor: pointer;
-    transition-duration: 0.1s;
-    font-weight: bold;
-}
-.searchFiltersFilter:last-child {
-    margin-right: 0;
-}
-.searchFiltersFilter:hover {
-    background-color: #f3f8ff;
-    transform: scale(1.015);
-}
-.searchFiltersFilterWrapicon {
-    background-color: #DEEBFF;
-    border-radius: 100%;
-    height: 3rem;
-    width: 3rem;
-    min-height: 3.5rem;
-    min-width: 3.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: -2px;
-}
-.searchFiltersFilterWrapiconIcon {
-    color: blue;
-}
-.searchFiltersFilterTitle {
-    margin: 0 1rem;
-}
-.searchResult {
-    display: flex;
-    align-items: center;
-    margin: 1rem 0 2rem 0;
-}
-.searchResultWrapicon {
-    height: 2rem;
-    width: 2rem;
-    min-height: 2rem;
-    min-width: 2rem;
-    border: solid 1px #d9d9d9;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 1rem;
-}
-.searchResultWrapiconIcon {
-    color: #0065FC;
-}
-.searchResultText {
-    margin: 0;
-}
-
-.hebergementWrapper, .hebergementPopular, .hebergementMain {
-    background-color: #F2F2F2;
-    border-radius: 1.5rem;
-    padding: 2rem;
-}
-
-.hebergement {
-    display: grid;
-    column-gap: 2rem;
-    grid-template-columns: 6fr 3fr;
-}
-.hebergementMain {
-    display: grid;
-    column-gap: 2rem;
-    row-gap: 2rem;
-}
-.hebergementMainHeader {
-    grid-column: 1/-1;
-}
-.hebergementMainHeaderTitle {
-    margin: 0;
-}
-.hebergementMainCard {
-    background-color: white;
-    padding: 0.375rem;
-    border-radius: 1.25rem;
-    box-shadow: 0 0 16px #0000002e;
-    transition-duration: 0.1s;
-    cursor: pointer;
-    box-sizing: border-box;
-    height: 100%;
-}
-.hebergementMainCard:hover {
-    transform: scale(1.02);
-}
-.hebergementMainCardFigure {
-    margin: 0;
-}
-.hebergementMainCardFigureImg {
-    height: 7rem;
-    object-fit: cover;
-    max-width: 100%;
-    width: 100%;
-    max-height: 100%;
-    border-radius: 1rem 1rem 0 0;
-}
-.hebergementMainCardFigureCaptionTitle {
-    margin: 0.25rem 0.75rem 0 0.75rem;
-}
-.hebergementMainCardDesc {
-    margin: 0.25rem 0.75rem 0.25rem 0.75rem;
-}
-.hebergementMainCardDescPrice {
-    font-weight: bold;
-}
-.hebergementMainCardGrade {
-    margin: 0 0.75rem 0.25rem 0.75rem;
-}
-.hebergementMainCardGradeIcon[data-active=true] {
-    color: #0065FC;
-}
-.hebergementMainCardGradeIcon[data-active=false] {
-    color: #d9d9d9;
-}
-.hebergementMainViewmore {
-    font-weight: bold;
-}
-.hebergementPopular {
-    display: grid;
-    row-gap: 2rem;
-    align-items: start;
-    grid-template-rows: auto repeat(3, 1fr);
-}
-.hebergementPopularTitle {
-    margin: 0;
-    display: flex;
-    justify-content: space-between;
-}
-.hebergementPopularWrapcontent {
-    display: flex;
-    align-items: stretch;
-    height: 100%;
-    overflow: auto;
-}
-.hebergementPopularWrapcontentWrapimg {
-    position: relative;
-    min-height: 100%;
-    width: 33%;
-    min-width: 33%;
-    max-width: 33%;
-}
-.hebergementPopularWrapcontentWrapimgImg {
-    border-radius: 1rem 0 0 1rem;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.hebergementPopularWrapcontentContent {
-    display: flex;
-    flex-direction: column;
-}
-.hebergementPopularWrapcontentContentWhitespace {
-    flex: 1;
-}
-.hebergementPopularhebergementMainCard {
-    height: 8.75rem;
-}
-
-.activite {
-    display: grid;
-    column-gap: 2rem;
-    margin: 4rem 0;
-}
-.activiteTitle {
-    grid-column: 1/-1;
-}
-.activiteCard {
-    box-shadow: 0 0 20px #0000002e;
-    border-radius: 1rem;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    transition-duration: 0.1s;
-}
-.activiteCard:hover {
-    transform: scale(1.01);
-}
-.activiteCardWrapimg {
-    position: relative;
-    flex: 1;
-}
-.activiteCardWrapimgImg {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-.activiteCardTitle {
-    margin: 1.2rem 1.5rem;
 }
 .footer {
     background-color: #F2F2F2;
@@ -346,22 +70,431 @@ a {
 .footerColumnwrapperColumnLink:hover {
     text-decoration: underline;
 }
+@media screen and (min-width: 651px) and (max-width: 1200px) {
+    body {
+        font-family: "Raleway", "Sans serif", serif;
+        margin: 0;
+    }
+
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
+
+    .header {
+        display: grid;
+        align-items: center;
+        max-width: 1440px;
+        margin: auto;
+        grid-template-columns: auto 1fr auto auto;
+        grid-template-areas: "logo . navbar button";
+    }
+
+    .headerImg {
+        grid-area: logo;
+        padding: 0 2rem;
+        height: 2.813rem;
+    }
+
+    .headerNav {
+        display: flex;
+        align-items: center;
+        grid-area: navbar;
+    }
+
+    .headerNavLink {
+        padding: 2rem;
+        font-weight: 500;
+        text-align: center;
+        transition-duration: 0.1s;
+        border-top: 3px transparent solid;
+        border-bottom: 3px transparent solid;
+    }
+
+    .headerNavLink[data-active=true] {
+        color: #0065FC;
+        border-top: 3px solid #0065FC;
+    }
+
+    .headerNavLink:hover {
+        color: #0065FC;
+    }
+
+    .headerSignup {
+        display: flex;
+        align-items: center;
+        grid-area: button;
+        padding: 2rem;
+        color: #0065FC;
+        font-weight: 600;
+    }
+
+    .main {
+        max-width: 1440px;
+        margin: auto;
+        padding: 0 2rem;
+        box-sizing: border-box;
+    }
+
+    .searchHeaderTitle {
+        margin-bottom: 0.5rem;
+    }
+
+    .searchHeaderSubtitle {
+        margin-top: 0;
+    }
+
+    .searchForm {
+        display: inline-flex;
+        max-width: 100%;
+        overflow: auto;
+    }
+
+    .searchFormWrapicon {
+        background-color: #F2F2F2;
+        padding: 1rem 1.25rem;
+        border-radius: 1rem 0 0 1rem;
+        text-align: center;
+    }
+
+    .searchFormWrapiconIcon {
+        margin-left: 0.1rem;
+    }
+
+    .searchFormSearchinput {
+        border-right: none;
+        border-left: none;
+        border-top: #F2F2F2 1px solid;
+        border-bottom: #F2F2F2 1px solid;
+        padding: 0 1.5rem;
+        box-sizing: border-box;
+        width: 14rem;
+        font-size: 1rem;
+        font-weight: bold;
+        font-family: "Raleway", "Sans serif", serif;
+    }
+
+    .searchFormSearchinput::placeholder {
+        font-family: "Raleway", "Sans serif", serif;
+        font-size: 1rem;
+        color: #00000069;
+    }
+
+    .searchFormSubmitinput {
+        background-color: #0065FC;
+        color: white;
+        font-weight: bold;
+        border: none;
+        border-radius: 0 1rem 1rem 0;
+        padding: 0 1.5rem;
+        font-family: "Raleway", "Sans serif", serif;
+        font-size: 1rem;
+        cursor: pointer;
+    }
+
+    .searchFormSubmitinputText {
+        display: block;
+    }
+
+    .searchFormSubmitinputIcon {
+        display: none !important;
+    }
+
+    .searchFilters {
+        display: flex;
+        margin-top: 2rem;
+        flex-wrap: wrap;
+    }
+
+    .searchFiltersTitle {
+        margin: 0 2rem 1rem 0;
+        display: flex;
+        align-items: center;
+    }
+
+    .searchFiltersFilter {
+        display: flex;
+        align-items: center;
+        margin-right: 2rem;
+        border: 2px solid #d9d9d9;
+        border-radius: 2rem;
+        margin-bottom: 1rem;
+        cursor: pointer;
+        transition-duration: 0.1s;
+        font-weight: bold;
+    }
+
+    .searchFiltersFilter:last-child {
+        margin-right: 0;
+    }
+
+    .searchFiltersFilter:hover {
+        background-color: #f3f8ff;
+        transform: scale(1.015);
+    }
+
+    .searchFiltersFilterWrapicon {
+        background-color: #DEEBFF;
+        border-radius: 100%;
+        height: 3rem;
+        width: 3rem;
+        min-height: 3.5rem;
+        min-width: 3.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: -2px;
+    }
+
+    .searchFiltersFilterWrapiconIcon {
+        color: blue;
+    }
+
+    .searchFiltersFilterTitle {
+        margin: 0 1rem;
+    }
+
+    .searchResult {
+        display: flex;
+        align-items: center;
+        margin: 1rem 0 2rem 0;
+    }
+
+    .searchResultWrapicon {
+        height: 2rem;
+        width: 2rem;
+        min-height: 2rem;
+        min-width: 2rem;
+        border: solid 1px #d9d9d9;
+        border-radius: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 1rem;
+    }
+
+    .searchResultWrapiconIcon {
+        color: #0065FC;
+    }
+
+    .searchResultText {
+        margin: 0;
+    }
+
+    .hebergementWrapper, .hebergementPopular, .hebergementMain {
+        background-color: #F2F2F2;
+        border-radius: 1.5rem;
+        padding: 2rem;
+    }
+
+    .hebergement {
+        display: grid;
+        column-gap: 2rem;
+        grid-template-columns: 6fr 3fr;
+    }
+
+    .hebergementMain {
+        display: grid;
+        column-gap: 2rem;
+        row-gap: 2rem;
+    }
+
+    .hebergementMainHeader {
+        grid-column: 1/-1;
+    }
+
+    .hebergementMainHeaderTitle {
+        margin: 0;
+    }
+
+    .hebergementMainCard {
+        background-color: white;
+        padding: 0.375rem;
+        border-radius: 1.25rem;
+        box-shadow: 0 0 16px #0000002e;
+        transition-duration: 0.1s;
+        cursor: pointer;
+        box-sizing: border-box;
+        height: 100%;
+    }
+
+    .hebergementMainCard:hover {
+        transform: scale(1.02);
+    }
+
+    .hebergementMainCardFigure {
+        margin: 0;
+    }
+
+    .hebergementMainCardFigureImg {
+        height: 7rem;
+        object-fit: cover;
+        max-width: 100%;
+        width: 100%;
+        max-height: 100%;
+        border-radius: 1rem 1rem 0 0;
+    }
+
+    .hebergementMainCardFigureCaptionTitle {
+        margin: 0.25rem 0.75rem 0 0.75rem;
+    }
+
+    .hebergementMainCardDesc {
+        margin: 0.25rem 0.75rem 0.25rem 0.75rem;
+    }
+
+    .hebergementMainCardDescPrice {
+        font-weight: bold;
+    }
+
+    .hebergementMainCardGrade {
+        margin: 0 0.75rem 0.25rem 0.75rem;
+    }
+
+    .hebergementMainCardGradeIcon[data-active=true] {
+        color: #0065FC;
+    }
+
+    .hebergementMainCardGradeIcon[data-active=false] {
+        color: #d9d9d9;
+    }
+
+    .hebergementMainViewmore {
+        font-weight: bold;
+    }
+
+    .hebergementPopular {
+        display: grid;
+        row-gap: 2rem;
+        align-items: start;
+        grid-template-rows: auto repeat(3, 1fr);
+    }
+
+    .hebergementPopularTitle {
+        margin: 0;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .hebergementPopularWrapcontent {
+        display: flex;
+        align-items: stretch;
+        height: 100%;
+        overflow: auto;
+    }
+
+    .hebergementPopularWrapcontentWrapimg {
+        position: relative;
+        min-height: 100%;
+        width: 33%;
+        min-width: 33%;
+        max-width: 33%;
+    }
+
+    .hebergementPopularWrapcontentWrapimgImg {
+        border-radius: 1rem 0 0 1rem;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .hebergementPopularWrapcontentContent {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .hebergementPopularWrapcontentContentWhitespace {
+        flex: 1;
+    }
+
+    .hebergementPopularhebergementMainCard {
+        height: 8.75rem;
+    }
+
+    .activite {
+        display: grid;
+        column-gap: 2rem;
+        margin: 4rem 0;
+    }
+
+    .activiteTitle {
+        grid-column: 1/-1;
+    }
+
+    .activiteCard {
+        box-shadow: 0 0 20px #0000002e;
+        border-radius: 1rem;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        transition-duration: 0.1s;
+    }
+
+    .activiteCard:hover {
+        transform: scale(1.01);
+    }
+
+    .activiteCardWrapimg {
+        position: relative;
+        flex: 1;
+    }
+
+    .activiteCardWrapimgImg {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .activiteCardTitle {
+        margin: 1.2rem 1.5rem;
+    }
+
+    .footer {
+        background-color: #F2F2F2;
+        width: 100%;
+    }
+
+    .footerColumnwrapper {
+        display: flex;
+        max-width: 100%;
+        width: 1440px;
+        margin: auto;
+        padding: 0 2rem;
+        box-sizing: border-box;
+    }
+
+    .footerColumnwrapperColumn {
+        width: 30%;
+        padding: 2rem 2rem;
+    }
+
+    .footerColumnwrapperColumnLink {
+        display: block;
+        margin: 1rem 0;
+    }
+
+    .footerColumnwrapperColumnLink:hover {
+        text-decoration: underline;
+    }
 
 
     .hebergement {
         grid-template-columns: 1fr;
         row-gap: 2rem;
     }
+
     .hebergementPopular {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: auto 10rem;
         column-gap: 2rem;
         grid-row-start: 1;
     }
+
     .hebergementPopularTitle {
         grid-column: 1/-1;
     }
-
 
 
     .hebergementMain {
@@ -369,12 +502,10 @@ a {
     }
 
 
-
     .hebergementPopular {
         grid-template-columns: 1fr;
         grid-template-rows: auto repeat(3, 9rem);
     }
-
 
 
     .activite {
@@ -389,3 +520,4 @@ a {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto 12rem 12rem 12rem;
     }
+}
