--- a/style/mobile.css
+++ b/style/mobile.css
@@ -51,7 +51,7 @@ a {
 .main {
     max-width: 1440px;
     margin: auto;
-    padding: 0 2rem;
+    padding: 0 0.5rem;
     box-sizing: border-box;
 }
 
@@ -136,8 +136,8 @@ a {
     border-radius: 100%;
     height: 3rem;
     width: 3rem;
-    min-height: 3.5rem;
-    min-width: 3.5rem;
+    min-height: 3rem;
+    min-width: 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -173,14 +173,14 @@ a {
     margin: 0;
 }
 
-.hebergementWrapper, .hebergementPopular, .hebergementMain {
+.hebergementWrapper, .hebergementPopular{
     background-color: #F2F2F2;
-    border-radius: 1.5rem;
     padding: 2rem;
 }
 
 .hebergement {
-    display: grid;
+    display: flex;
+    flex-direction: column-reverse;
     column-gap: 2rem;
     grid-template-columns: 6fr 3fr;
 }
@@ -221,9 +221,11 @@ a {
 }
 .hebergementMainCardFigureCaptionTitle {
     margin: 0.25rem 0.75rem 0 0.75rem;
+    font-size: 1rem;
 }
 .hebergementMainCardDesc {
     margin: 0.25rem 0.75rem 0.25rem 0.75rem;
+    font-size: 0.8rem;
 }
 .hebergementMainCardDescPrice {
     font-weight: bold;
